# ideformer-plugin

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
ide-former-plugin/: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  runPluginStarter.sh  settings.gradle.kts
ide-former-plugin/.github/workflows/: build.yml
ide-former-plugin/gradle/: libs.versions.toml
ide-former-plugin/ide-assistant/: build.gradle.kts
ide-former-plugin/ide-core/src/test/testData/testProject/dir1/: SomeJavaClass.java  pyFile.py  someKtFile2.kt
ide-former-plugin/ide-server/: build.gradle.kts
ide-former-plugin/ide-server-starter/: build.gradle.kts
ide-former-plugin/ide-server-starter/src/main/resources/ideApiDescriptions/: exampleDesc.json  ideApiDescriptions.json
ide-former-plugin/plugin/: build.gradle.kts
ide-former-plugin/plugin-starter/: build.gradle.kts
ide-former-plugin/plugin-starter/src/main/kotlin/com/ideAssistant/: IdeServerStarter.kt  PluginRunner.kt
ide-former-plugin/src/main/kotlin/com/ideAssistant/api/: IdeApi.kt
ide-former-plugin/src/main/kotlin/com/ideAssistant/model/: LLMSimulator.kt
ide-former-plugin/src/main/kotlin/com/ideassistant/: IDEApi.kt  IDEAssistantToolWindowFactory.kt  IDEServer.kt  IDEStateKeeper.kt  LLMSimulator.kt  PsiElementsUtils.kt  UserQueryTransmitter.kt
ide-former-plugin/src/test/kotlin/com/ideassistant/: IDEApiTest.kt
ide-former-plugin/src/test/testData/testProject/dir1/: someKtFile2.kt
ide_former_simulation/: __init__.py  docker_session.py
notebooks/: 01-ReAct-Bash.ipynb
(+102 files in other folders)
