[project]
name = "ide_former_simulation"
description = "Helper library IDE Former Simulation"
license = { file = "LICENSE" }
version = "0.1.0"
authors = [
    { name = "Evgeny Grigorenko", email = "evgeny.grigorenko@jetbrains.com" },
    { name = "Evgenija Fedotova", email = "evgeniia.fedotova@jetbrains.com" },
    { name = "Yaroslav Zharov", email = "yaroslav.zharov@jetbrains.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

requires-python = ">=3.9,<3.12"

dependencies = [
    "docker~=6.1.3",
    "outlines @ git+https://github.com/evgri243/outlines.git@evgri243/relax-model-loading",
    "jinja2~=3.1.2",
    "openai~=0.28.1",
    "backoff~=2.2.1",
    "jupyter~=1.0.0",
    "tiktoken~=0.5.1",
    "nest-asyncio~=1.5.8",
    "transformers~=4.33.3",
    "tokenizers~=0.13.0",
    "torch~=2.1.0",
]

[build-system]
requires = ["setuptools ~= 68.2.2", "cython ~= 3.0.5"]
